redis/redis-primary.deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-primary
  namespace: workspace
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: primary
        tier: backend
    spec:
      containers:
        - name: redis
          image: gcr.io/google_containers/redis:e2e
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
        - containerPort: 6379
