redis/redis-replica.deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-replica
  namespace: workspace
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: replica
        tier: backend
    spec:
      containers:
        - name: replica
          image: gcr.io/google_samples/gb-redisslave:v2
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 6379
