redis/redis-primary.service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-primary
  namespace: workspace
    labels:
      app: redis
      role: primary
      tier: backend
spec:
  ports:
    - port: 6379
      targetPort: 6379
    selector:
      app: redis
      role: primary
      tier: backend
