redis/redis-replica.service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-replica
  namespace: workspace
  labels:
    app: redis
    role: replica
    tier: backend
spec:
  ports:
    - port: 6379
  selector:
    app: redis
    role: replica
    tier: backend
